# hallucination-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  release.yml
docs/superpowers/specs/: 2026-06-02-hallucination-eval-design.md
notebooks/: walkthrough.ipynb
src/hallucination_eval/: __init__.py  _nli.py  _text.py  cli.py  model_client.py  report.py
src/hallucination_eval/datasets/: __init__.py  loader.py
src/hallucination_eval/evaluators/: __init__.py  base.py  entity_score.py  fact_score.py  faith_score.py
tests/: conftest.py  test_cli.py  test_evaluators.py  test_integration.py  test_loader.py  test_model_client.py  test_report.py
