[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-eval"
version = "0.1.0"
description = "Measure LLM hallucination with FactScore (NLI), FaithScore (NLI) and EntityScore (NER)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "hallucination-eval contributors" }]
keywords = ["llm", "hallucination", "evaluation", "nli", "ner", "factuality", "faithfulness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence-transformers>=2.7.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "spacy>=3.7.0",
    "datasets>=2.18.0",
    "rich>=13.0.0",
    "openai>=1.30.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
hallucination-eval = "hallucination_eval.cli:main"

[project.urls]
Homepage = "https://github.com/JananiV07/hallucination-eval"
Repository = "https://github.com/JananiV07/hallucination-eval"

# NOTE: the spaCy model `en_core_web_sm` is not installable as an ordinary
# PyPI dependency. After installing this package, run:
#     python -m spacy download en_core_web_sm

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: loads the real NLI/spaCy models (slow, downloads weights)",
]
testpaths = ["tests"]
addopts = "-m 'not integration'"
